--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@ testpaths = gdsfactory/
 # addopts = --tb=no
 addopts = '--tb=short'
 python_files = gdsfactory/*.py notebooks/*.ipynb
-norecursedirs = gdsfactory/simulation extra/*.py gdsfactory/watch.py
+norecursedirs = gdsfactory/simulation extra/*.py gdsfactory/watch.py gdsfactory/kl
 
 
 #filterwarnings =
