--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,29 +22,26 @@ readme = "README.md"
 
 
 [tool.poetry.dependencies]
-python = ">=3.7"
-click="*"
-flatdict="*"
-gdstk="*"
-jsondiff="*"
-loguru="*"
-matplotlib="*"
-numpy="*"
-omegaconf="*"
-orjson="*"
-pandas="*"
-pydantic="*"
-pyyaml="*"
-qrcode="*"
-rectpack="*"
-scipy="*"
-shapely="*"
-toolz="*"
-tqdm="*"
-types-PyYAML="*"
-typing_extensions="*"
-watchdog="*"
-xmltodict="*"
+python = ">=3.8"
+click = "^8.1.3"
+flatdict = "^4.0.1"
+gdstk = "^0.9.34"
+jsondiff = "^2.0.0"
+loguru = "^0.6.0"
+numpy = "^1.23.5"
+omegaconf = "^2.3.0"
+orjson = "^3.8.3"
+pandas = "^1.5.2"
+pydantic = "^1.10.2"
+pyyaml = "^6.0"
+qrcode = "^7.3.1"
+rectpack = "^0.2.2"
+scipy = "^1.9.3"
+shapely = "^2.0.0"
+toolz = "^0.12.0"
+tqdm = "^4.64.1"
+watchdoc = "^0.0.1"
+xmltodict = "^0.13.0"
 
 [tool.poetry.extras]
 full = [
